--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,6 @@
         "noUncheckedSideEffectImports": true
     },
     "include": [
-        "src",
-        "postcss.config.cjs"
+        "src"
     ]
 }
